fix: solve the whitespace issues

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -37,6 +37,7 @@
       justify-content: space-between;
       padding: 2rem 0;
       align-items: center;
+      line-height: normal;
 
       .logo {
         width: 80px;
@@ -75,16 +76,18 @@
         font-size: 3rem;
         font-weight: lighter;
         text-transform: uppercase;
-        margin: 0 0 -0.5rem 0;
+        line-height: 100%;
       }
       h1 {
         font-size: 4rem;
+        line-height: 100%;
+        margin: 1.5rem 0 0 0;
       }
       .small {
-        margin: 1.5rem 0;
+        margin: 3rem 0;
       }
       .btn-main {
-        margin: 1.5rem 0 0 2rem;
+        margin: 0 0 0 2rem;
       }
     }
   }
